Update task_4 to train on the whole set

--- a/task_3/task_3.ipynb
+++ b/task_3/task_3.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,63 +119,299 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sequence</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>HWFK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>MWPW</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ALDV</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NTLG</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LHYY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AFGM</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>TPNY</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>EAKD</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NDKE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>GFIS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Sequence\n",
+       "0     HWFK\n",
+       "1     MWPW\n",
+       "2     ALDV\n",
+       "3     NTLG\n",
+       "4     LHYY\n",
+       "5     AFGM\n",
+       "6     TPNY\n",
+       "7     EAKD\n",
+       "8     NDKE\n",
+       "9     GFIS"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Load the training dataframe\n",
+    "# Load the dataframes\n",
     "train_data = pd.read_csv(\"data/train.csv\")\n",
+    "test_data=pd.read_csv(\"data/test.csv\")\n",
     "\n",
-    "# Preview the train dataframe\n",
-    "display(train_data.head(10))"
+    "# Preview the dataframes\n",
+    "display(train_data.head(10))\n",
+    "display(test_data.head(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D K W L DKWL\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th>third</th>\n",
+       "      <th>fourth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>D</td>\n",
+       "      <td>K</td>\n",
+       "      <td>W</td>\n",
+       "      <td>L</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>F</td>\n",
+       "      <td>C</td>\n",
+       "      <td>H</td>\n",
+       "      <td>N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>K</td>\n",
+       "      <td>D</td>\n",
+       "      <td>Q</td>\n",
+       "      <td>P</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>W</td>\n",
+       "      <td>I</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>N</td>\n",
+       "      <td>K</td>\n",
+       "      <td>R</td>\n",
+       "      <td>M</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first second third fourth\n",
+       "0     D      K     W      L\n",
+       "1     F      C     H      N\n",
+       "2     K      D     Q      P\n",
+       "3     F      N     W      I\n",
+       "4     N      K     R      M"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     },
     {
-     "ename": "Exception",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-8395d2ae38d3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mch_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_4\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Sequence\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mch_1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_2\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mch_4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"Sequence\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mException\u001b[0m: "
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>second</th>\n",
+       "      <th>third</th>\n",
+       "      <th>fourth</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>H</td>\n",
+       "      <td>W</td>\n",
+       "      <td>F</td>\n",
+       "      <td>K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>M</td>\n",
+       "      <td>W</td>\n",
+       "      <td>P</td>\n",
+       "      <td>W</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>L</td>\n",
+       "      <td>D</td>\n",
+       "      <td>V</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>N</td>\n",
+       "      <td>T</td>\n",
+       "      <td>L</td>\n",
+       "      <td>G</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>L</td>\n",
+       "      <td>H</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first second third fourth\n",
+       "0     H      W     F      K\n",
+       "1     M      W     P      W\n",
+       "2     A      L     D      V\n",
+       "3     N      T     L      G\n",
+       "4     L      H     Y      Y"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "# Split sequences into characters\n",
-    "first = []\n",
-    "second = []\n",
-    "third = []\n",
-    "fourth = []\n",
+    "def create_char_df(df):\n",
+    "    \"\"\"Create a dataframe that contains four columns (one for each char in 'Sequence').\"\"\"\n",
     "\n",
-    "for _, row in data.iterrows():\n",
-    "    ch_1, ch_2, ch_3, ch_4 = row[\"Sequence\"]\n",
-    "    \n",
-    "    first.append(ch_1)\n",
-    "    second.append(ch_2)\n",
-    "    third.append(ch_3)\n",
-    "    fourth.append(ch_4)\n",
+    "    # Split sequences into characters\n",
+    "    first = []\n",
+    "    second = []\n",
+    "    third = []\n",
+    "    fourth = []\n",
     "\n",
-    "# Create X_df\n",
-    "X_df_dict = {\n",
-    "    \"first\": first,\n",
-    "    \"second\": second,\n",
-    "    \"third\": third,\n",
-    "    \"fourth\": fourth\n",
-    "}\n",
-    "X_df = pd.DataFrame(X_df_dict)"
+    "    for _, row in df.iterrows():\n",
+    "        ch_1, ch_2, ch_3, ch_4 = row[\"Sequence\"]\n",
+    "\n",
+    "        first.append(ch_1)\n",
+    "        second.append(ch_2)\n",
+    "        third.append(ch_3)\n",
+    "        fourth.append(ch_4)\n",
+    "\n",
+    "    df_dict = {\n",
+    "        \"first\": first,\n",
+    "        \"second\": second,\n",
+    "        \"third\": third,\n",
+    "        \"fourth\": fourth\n",
+    "    }\n",
+    "    return pd.DataFrame(df_dict)\n",
+    "\n",
+    "X_df = create_char_df(train_data)\n",
+    "X_test_df = create_char_df(test_data)\n",
+    "\n",
+    "display(X_df.head(5))\n",
+    "display(X_test_df.head(5))"
    ]
   },
   {
@@ -187,19 +423,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "OneHotEncoder(categories='auto', drop=None, dtype=<class 'numpy.float64'>,\n",
-       "              handle_unknown='ignore', sparse=True)"
+       "[array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
+       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object),\n",
+       " array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
+       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object),\n",
+       " array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
+       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object),\n",
+       " array(['A', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'K', 'L', 'M', 'N', 'P',\n",
+       "        'Q', 'R', 'S', 'T', 'V', 'W', 'Y'], dtype=object)]"
       ]
      },
-     "execution_count": 45,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -221,44 +462,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create training np arrays\n",
-    "X = enc.transform(data_split).toarray()\n",
-    "y = train_data[\"Active\"].values"
+    "X_train = enc.transform(X_df).toarray()\n",
+    "y_train = train_data[\"Active\"].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "\n",
-    "X=enc_data\n",
-    "y=np.array(data[\"Active\"])\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.1, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neural_network import MLPClassifier"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -266,125 +481,55 @@
      "output_type": "stream",
      "text": [
       "[Pipeline] .... (step 1 of 2) Processing standardscaler, total=   0.2s\n",
-      "[Pipeline] ..... (step 2 of 2) Processing mlpclassifier, total=  26.6s\n"
+      "Iteration 1, loss = 0.22803785\n",
+      "Iteration 2, loss = 0.07649394\n",
+      "Iteration 3, loss = 0.05941810\n",
+      "Iteration 4, loss = 0.04904024\n",
+      "Iteration 5, loss = 0.04267791\n",
+      "Iteration 6, loss = 0.03871639\n",
+      "Iteration 7, loss = 0.03617555\n",
+      "Iteration 8, loss = 0.03418426\n",
+      "Iteration 9, loss = 0.03260710\n",
+      "Iteration 10, loss = 0.03152534\n",
+      "Iteration 11, loss = 0.03060759\n",
+      "Iteration 12, loss = 0.02972534\n",
+      "Iteration 13, loss = 0.02925880\n",
+      "Iteration 14, loss = 0.02875247\n",
+      "Iteration 15, loss = 0.02833662\n",
+      "Iteration 16, loss = 0.02785404\n",
+      "Iteration 17, loss = 0.02743803\n",
+      "Iteration 18, loss = 0.02697936\n",
+      "Iteration 19, loss = 0.02661015\n",
+      "Iteration 20, loss = 0.02636317\n",
+      "Iteration 21, loss = 0.02584833\n",
+      "Iteration 22, loss = 0.02557382\n",
+      "Iteration 23, loss = 0.02540533\n",
+      "Iteration 24, loss = 0.02479886\n",
+      "Iteration 25, loss = 0.02452182\n",
+      "Iteration 26, loss = 0.02423649\n",
+      "Iteration 27, loss = 0.02388542\n",
+      "Iteration 28, loss = 0.02354361\n",
+      "Iteration 29, loss = 0.02315945\n",
+      "Iteration 30, loss = 0.02308469\n",
+      "Iteration 31, loss = 0.02271279\n",
+      "Iteration 32, loss = 0.02242971\n",
+      "Iteration 33, loss = 0.02223574\n",
+      "Iteration 34, loss = 0.02193500\n",
+      "Iteration 35, loss = 0.02168397\n",
+      "Iteration 36, loss = 0.02141529\n",
+      "Iteration 37, loss = 0.02114664\n",
+      "Iteration 38, loss = 0.02114132\n",
+      "Iteration 39, loss = 0.02079336\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Pipeline(memory=None,\n",
-       "         steps=[('standardscaler',\n",
-       "                 StandardScaler(copy=True, with_mean=True, with_std=True)),\n",
-       "                ('mlpclassifier',\n",
-       "                 MLPClassifier(activation='relu', alpha=0.0001, batch_size=128,\n",
-       "                               beta_1=0.9, beta_2=0.999, early_stopping=False,\n",
-       "                               epsilon=1e-08, hidden_layer_sizes=(15,),\n",
-       "                               learning_rate='constant',\n",
-       "                               learning_rate_init=0.001, max_fun=15000,\n",
-       "                               max_iter=200, momentum=0.9, n_iter_no_change=10,\n",
-       "                               nesterovs_momentum=True, power_t=0.5,\n",
-       "                               random_state=None, shuffle=True, solver='adam',\n",
-       "                               tol=0.0001, validation_fraction=0.1,\n",
-       "                               verbose=False, warm_start=False))],\n",
-       "         verbose=True)"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
     "clf = make_pipeline(StandardScaler(), MLPClassifier(hidden_layer_sizes=(15,), batch_size=128, verbose=True), verbose=True)\n",
     "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.864994026284349"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import f1_score\n",
-    "y_pred=clf.predict(X_val)\n",
-    "f1_score(y_val, y_pred)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data=pd.read_csv(\"data/test.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "first=[]\n",
-    "second=[]\n",
-    "third=[]\n",
-    "fourth=[]\n",
-    "for index,row in test_data.iterrows():\n",
-    "    first.append(split(row[0])[0])\n",
-    "    second.append(split(row[0])[1])\n",
-    "    third.append(split(row[0])[2])\n",
-    "    fourth.append(split(row[0])[3])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_data_split=pd.DataFrame()\n",
-    "test_data_split[\"First\"]=first\n",
-    "test_data_split[\"Second\"]=second\n",
-    "test_data_split[\"Third\"]=third\n",
-    "test_data_split[\"Fourth\"]=fourth"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "enc_test_data=enc.transform(test_data_split).toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_test=clf.predict(enc_test_data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.savetxt(\"submission.txt\", y_test, fmt=\"%d\")"
    ]
   },
   {
@@ -392,7 +537,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_test = enc.transform(X_test_df).toarray()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_test=clf.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.savetxt(\"submission.txt\", y_test, fmt=\"%d\")"
+   ]
   },
   {
    "cell_type": "code",
