Set task_3 random seeds

--- a/task_3/task_3.ipynb
+++ b/task_3/task_3.ipynb
@@ -8,7 +8,11 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "import tensorflow as tf\n",
+    "\n",
+    "np.random.seed(1337)\n",
+    "tf.random.set_seed(1337)"
    ]
   },
   {
@@ -462,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -480,9 +484,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras import backend as K\n",
     "\n",
@@ -506,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -514,122 +526,87 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0822 - f1_m: 0.4064 - val_loss: 0.0461 - val_f1_m: 0.7594\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0933 - f1_m: 0.3334 - val_loss: 0.0479 - val_f1_m: 0.6638\n",
       "Epoch 2/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0411 - f1_m: 0.7536 - val_loss: 0.0261 - val_f1_m: 0.8694\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0430 - f1_m: 0.7293 - val_loss: 0.0291 - val_f1_m: 0.7883\n",
       "Epoch 3/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0320 - f1_m: 0.7940 - val_loss: 0.0219 - val_f1_m: 0.8797\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0324 - f1_m: 0.8003 - val_loss: 0.0228 - val_f1_m: 0.8600\n",
       "Epoch 4/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0268 - f1_m: 0.8300 - val_loss: 0.0202 - val_f1_m: 0.8809\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0275 - f1_m: 0.8258 - val_loss: 0.0209 - val_f1_m: 0.8415\n",
       "Epoch 5/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0242 - f1_m: 0.8553 - val_loss: 0.0186 - val_f1_m: 0.9200\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0242 - f1_m: 0.8513 - val_loss: 0.0178 - val_f1_m: 0.8999\n",
       "Epoch 6/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0221 - f1_m: 0.8644 - val_loss: 0.0163 - val_f1_m: 0.8975\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0213 - f1_m: 0.8691 - val_loss: 0.0176 - val_f1_m: 0.9016\n",
       "Epoch 7/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0204 - f1_m: 0.8711 - val_loss: 0.0182 - val_f1_m: 0.8824\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0202 - f1_m: 0.8755 - val_loss: 0.0156 - val_f1_m: 0.9008\n",
       "Epoch 8/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0194 - f1_m: 0.8727 - val_loss: 0.0178 - val_f1_m: 0.8757\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0186 - f1_m: 0.8802 - val_loss: 0.0148 - val_f1_m: 0.8995\n",
       "Epoch 9/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0178 - f1_m: 0.8873 - val_loss: 0.0165 - val_f1_m: 0.9078\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0171 - f1_m: 0.8916 - val_loss: 0.0134 - val_f1_m: 0.9115\n",
       "Epoch 10/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0162 - f1_m: 0.9004 - val_loss: 0.0175 - val_f1_m: 0.8959\n",
+      "858/858 [==============================] - 1s 2ms/step - loss: 0.0166 - f1_m: 0.8981 - val_loss: 0.0141 - val_f1_m: 0.9137\n",
       "Epoch 11/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0158 - f1_m: 0.9001 - val_loss: 0.0160 - val_f1_m: 0.9157\n",
+      "858/858 [==============================] - 1s 2ms/step - loss: 0.0157 - f1_m: 0.8980 - val_loss: 0.0137 - val_f1_m: 0.9157\n",
       "Epoch 12/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0151 - f1_m: 0.9032 - val_loss: 0.0127 - val_f1_m: 0.9223\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0148 - f1_m: 0.9089 - val_loss: 0.0156 - val_f1_m: 0.8891\n",
       "Epoch 13/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0147 - f1_m: 0.9058 - val_loss: 0.0153 - val_f1_m: 0.9119\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0138 - f1_m: 0.9092 - val_loss: 0.0155 - val_f1_m: 0.9112\n",
       "Epoch 14/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0144 - f1_m: 0.9093 - val_loss: 0.0160 - val_f1_m: 0.9160\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0136 - f1_m: 0.9148 - val_loss: 0.0144 - val_f1_m: 0.9020\n",
       "Epoch 15/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0133 - f1_m: 0.9111 - val_loss: 0.0143 - val_f1_m: 0.8877\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0126 - f1_m: 0.9178 - val_loss: 0.0149 - val_f1_m: 0.8977\n",
       "Epoch 16/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0134 - f1_m: 0.9111 - val_loss: 0.0159 - val_f1_m: 0.9015\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0121 - f1_m: 0.9194 - val_loss: 0.0131 - val_f1_m: 0.9260\n",
       "Epoch 17/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0129 - f1_m: 0.9127 - val_loss: 0.0158 - val_f1_m: 0.9015\n",
+      "858/858 [==============================] - 1s 2ms/step - loss: 0.0125 - f1_m: 0.9186 - val_loss: 0.0139 - val_f1_m: 0.9063\n",
       "Epoch 18/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0129 - f1_m: 0.9095 - val_loss: 0.0136 - val_f1_m: 0.9112\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0117 - f1_m: 0.9232 - val_loss: 0.0136 - val_f1_m: 0.9168\n",
       "Epoch 19/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0122 - f1_m: 0.9164 - val_loss: 0.0141 - val_f1_m: 0.9217\n",
+      "858/858 [==============================] - 1s 2ms/step - loss: 0.0107 - f1_m: 0.9339 - val_loss: 0.0164 - val_f1_m: 0.9188\n",
       "Epoch 20/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0115 - f1_m: 0.9290 - val_loss: 0.0157 - val_f1_m: 0.9028\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0115 - f1_m: 0.9270 - val_loss: 0.0136 - val_f1_m: 0.9033\n",
       "Epoch 21/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0112 - f1_m: 0.9291 - val_loss: 0.0154 - val_f1_m: 0.9006\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0104 - f1_m: 0.9322 - val_loss: 0.0154 - val_f1_m: 0.9101\n",
       "Epoch 22/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0114 - f1_m: 0.9249 - val_loss: 0.0147 - val_f1_m: 0.8926\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0099 - f1_m: 0.9367 - val_loss: 0.0141 - val_f1_m: 0.9090\n",
       "Epoch 23/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0104 - f1_m: 0.9360 - val_loss: 0.0143 - val_f1_m: 0.9072\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0099 - f1_m: 0.9289 - val_loss: 0.0156 - val_f1_m: 0.9118\n",
       "Epoch 24/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0099 - f1_m: 0.9303 - val_loss: 0.0153 - val_f1_m: 0.8847\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0096 - f1_m: 0.9349 - val_loss: 0.0155 - val_f1_m: 0.9237\n",
       "Epoch 25/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0104 - f1_m: 0.9379 - val_loss: 0.0180 - val_f1_m: 0.8896\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0091 - f1_m: 0.9375 - val_loss: 0.0158 - val_f1_m: 0.9126\n",
       "Epoch 26/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0095 - f1_m: 0.9408 - val_loss: 0.0139 - val_f1_m: 0.9135\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0091 - f1_m: 0.9449 - val_loss: 0.0163 - val_f1_m: 0.9203\n",
       "Epoch 27/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0095 - f1_m: 0.9355 - val_loss: 0.0146 - val_f1_m: 0.8951\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0087 - f1_m: 0.9407 - val_loss: 0.0140 - val_f1_m: 0.9265\n",
       "Epoch 28/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0093 - f1_m: 0.9365 - val_loss: 0.0137 - val_f1_m: 0.8814\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0086 - f1_m: 0.9427 - val_loss: 0.0161 - val_f1_m: 0.9092\n",
       "Epoch 29/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0092 - f1_m: 0.9366 - val_loss: 0.0178 - val_f1_m: 0.9061\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0082 - f1_m: 0.9415 - val_loss: 0.0179 - val_f1_m: 0.9081\n",
       "Epoch 30/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0085 - f1_m: 0.9421 - val_loss: 0.0154 - val_f1_m: 0.9135\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0082 - f1_m: 0.9435 - val_loss: 0.0180 - val_f1_m: 0.9134\n",
       "Epoch 31/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0088 - f1_m: 0.9458 - val_loss: 0.0170 - val_f1_m: 0.9061\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0075 - f1_m: 0.9502 - val_loss: 0.0177 - val_f1_m: 0.9124\n",
       "Epoch 32/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0087 - f1_m: 0.9473 - val_loss: 0.0163 - val_f1_m: 0.9196\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0078 - f1_m: 0.9415 - val_loss: 0.0178 - val_f1_m: 0.9081\n",
       "Epoch 33/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0082 - f1_m: 0.9464 - val_loss: 0.0207 - val_f1_m: 0.8731\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0071 - f1_m: 0.9460 - val_loss: 0.0163 - val_f1_m: 0.8981\n",
       "Epoch 34/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0082 - f1_m: 0.9423 - val_loss: 0.0170 - val_f1_m: 0.9124\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0077 - f1_m: 0.9508 - val_loss: 0.0167 - val_f1_m: 0.9175\n",
       "Epoch 35/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0082 - f1_m: 0.9408 - val_loss: 0.0128 - val_f1_m: 0.9077\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0071 - f1_m: 0.9516 - val_loss: 0.0191 - val_f1_m: 0.9114\n",
       "Epoch 36/50\n",
-      "858/858 [==============================] - 2s 3ms/step - loss: 0.0078 - f1_m: 0.9517 - val_loss: 0.0160 - val_f1_m: 0.9151\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0074 - f1_m: 0.9536 - val_loss: 0.0185 - val_f1_m: 0.9175\n",
       "Epoch 37/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0078 - f1_m: 0.9487 - val_loss: 0.0161 - val_f1_m: 0.9004\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0068 - f1_m: 0.9493 - val_loss: 0.0153 - val_f1_m: 0.9200\n",
       "Epoch 38/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0073 - f1_m: 0.9543 - val_loss: 0.0164 - val_f1_m: 0.9053\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0070 - f1_m: 0.9388 - val_loss: 0.0204 - val_f1_m: 0.9138\n",
       "Epoch 39/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0078 - f1_m: 0.9453 - val_loss: 0.0173 - val_f1_m: 0.9059\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0063 - f1_m: 0.9585 - val_loss: 0.0176 - val_f1_m: 0.9274\n",
       "Epoch 40/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0071 - f1_m: 0.9521 - val_loss: 0.0139 - val_f1_m: 0.9217\n",
+      "858/858 [==============================] - 2s 2ms/step - loss: 0.0068 - f1_m: 0.9536 - val_loss: 0.0197 - val_f1_m: 0.9138\n",
       "Epoch 41/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0071 - f1_m: 0.9579 - val_loss: 0.0152 - val_f1_m: 0.9111\n",
-      "Epoch 42/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0076 - f1_m: 0.9552 - val_loss: 0.0161 - val_f1_m: 0.8819\n",
-      "Epoch 43/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0071 - f1_m: 0.9509 - val_loss: 0.0186 - val_f1_m: 0.9022\n",
-      "Epoch 44/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0064 - f1_m: 0.9606 - val_loss: 0.0128 - val_f1_m: 0.9196\n",
-      "Epoch 45/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0071 - f1_m: 0.9490 - val_loss: 0.0124 - val_f1_m: 0.9259\n",
-      "Epoch 46/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0063 - f1_m: 0.9565 - val_loss: 0.0142 - val_f1_m: 0.8919\n",
-      "Epoch 47/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0066 - f1_m: 0.9507 - val_loss: 0.0149 - val_f1_m: 0.9048\n",
-      "Epoch 48/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0067 - f1_m: 0.9550 - val_loss: 0.0152 - val_f1_m: 0.9006\n",
-      "Epoch 49/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0062 - f1_m: 0.9581 - val_loss: 0.0176 - val_f1_m: 0.8932\n",
-      "Epoch 50/50\n",
-      "858/858 [==============================] - 2s 2ms/step - loss: 0.0058 - f1_m: 0.9586 - val_loss: 0.0125 - val_f1_m: 0.9078\n",
-      "Model: \"sequential_36\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "dense_56 (Dense)             (None, 120)               9720      \n",
-      "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 120)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_57 (Dense)             (None, 40)                4840      \n",
-      "_________________________________________________________________\n",
-      "dense_58 (Dense)             (None, 1)                 41        \n",
-      "=================================================================\n",
-      "Total params: 14,601\n",
-      "Trainable params: 14,601\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n",
-      "None\n"
+      " 66/858 [=>............................] - ETA: 1s - loss: 0.0060 - f1_m: 0.9589"
      ]
     }
    ],
@@ -670,20 +647,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.920245398773006"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.metrics import f1_score\n",
     "y_pred = np.around(model.predict(X_val))\n",
@@ -692,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,25 +685,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.],\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       ...,\n",
-       "       [0.],\n",
-       "       [0.],\n",
-       "       [0.]], dtype=float32)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "display(y_test)"
    ]
